z-index fix

--- a/app/javascript/src/pages/patient/patient.scss
+++ b/app/javascript/src/pages/patient/patient.scss
@@ -51,6 +51,7 @@
     background: linear-gradient(lightblue, #CCCCFF);
     height: 100%;
     width: 100%;
+    z-index: 10001
   }
 }
 
